<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mileage Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_section1">Start</string>
    <string name="title_section2">Log</string>
    <string name="button_start">Begin Tracking</string>
    <string name="title_activity_track">Tracking Mileage</string>
    <string name="text_distance">Distance</string>
    <string name="text_money">Expense</string>
    <string name="text_speed">Speed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_time">Time</string>
    <string name="mph">mph</string>
    <string name="miles">miles</string>
    <string name="usd">usd</string>
    <string name="hours_mins">H:M:S</string>
    <string name="dialog_cancel_track">Cancel Tracking?</string>
    <string name="dialog_cancel_title">Cancel Tracking?</string>
    <string name="dialog_cancel_message">The current tracking information will be lost.</string>
    <string name="dialog_cancel_positive">Yes, cancel</string>
    <string name="dialog_cancel_negative">No, don\'t</string>
    <string name="text_average_speed">Average\nSpeed</string>
    <string name="text_current_speed">Current\nSpeed</string>
    <string name="button_finish">Finish Tracking</string>
    <string name="button_pause">pause</string>
    <string name="total_time">Total Time:</string>
    <string name="total_expense">Total Expense:</string>
    <string name="average_speed">Average Speed:</string>
    <string name="new_item">New item added to log.</string>
    <string name="notification_title">Mileage Tracker running</string>
    <string name="notification_message">Your miles are being recorded.</string>

</resources>
