<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.smp.mileagetracker.TrackActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/tile_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-regular"
                        android:text="@string/text_distance"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="16sp"

                        />

                    <TextView
                        android:id="@+id/text_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-regular"
                        android:text=""
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="34sp"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-regular"

                        android:text="@string/miles"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="14sp"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-regular"
                        android:text="@string/text_money"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="16sp"

                        />

                    <TextView
                        android:id="@+id/text_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-regular"
                        android:text=""
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="34sp"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-regular"

                        android:text="@string/usd"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="14sp"/>


                </LinearLayout>


            </LinearLayout>

            <View
                android:id="@+id/first_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tile_first"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:background="#1f000000"/>

            <LinearLayout
                android:id="@+id/second_tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_divider"
                android:layout_marginBottom="16dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-regular"
                        android:gravity="center"
                        android:text="@string/text_current_speed"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/text_current_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-regular"
                        android:text=""
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="34sp"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-regular"
                        android:text="@string/mph"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="14sp"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-regular"
                        android:gravity="center"
                        android:text="@string/text_average_speed"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/text_average_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-regular"
                        android:text=""
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="34sp"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-regular"
                        android:text="@string/mph"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="14sp"/>


                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/second_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/second_tile"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:background="#1f000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_divider"
                android:layout_marginBottom="16dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-regular"
                        android:text="@string/text_time"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/text_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-regular"
                        android:text=""
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="34sp"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-regular"
                        android:text="@string/hours_mins"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="14sp"/>


                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@id/footer"
        android:paddingBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        >

        <View
            android:id="@+id/third_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="#1f000000"/>


        <Button
            android:id="@+id/button_finish"
            style="?android:attr/borderlessButtonStyle"

            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-medium"
            android:minWidth="88dp"
            android:text="@string/button_finish"
            android:textAllCaps="true"
            android:textColor="@color/md_deep_orange_A700"
            android:textSize="14sp"/>

        <Button


            android:id="@+id/button_pause"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/button_finish"
            android:fontFamily="sans-serif-medium"
            android:minWidth="88dp"
            android:text="@string/button_pause"
            android:textAllCaps="true"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="14sp"/>


    </RelativeLayout>

</RelativeLayout>
