<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/tile_first"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/md_teal_100"
            >

            <TextView
                android:layout_marginLeft="16dp"
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="24sp"
                android:textColor="@color/primary_text_default_material_light"
                />

            <TextView
                android:layout_marginRight="16dp"
                android:id="@+id/text_total_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="24sp"
                android:textColor="@color/primary_text_default_material_light"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tile_second"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tile_first"
            >

            <LinearLayout
                android:id="@+id/first_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_alignParentLeft="true"
                >

                <TextView
                    android:id="@+id/text_start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text_default_material_light"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="-"/>

                <TextView
                    android:id="@+id/text_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text_default_material_light"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/first_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_time"
                        android:textSize="14sp"
                        android:textColor="@color/primary_text_default_material_light"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_expense"
                        android:textSize="14sp"
                        android:textColor="@color/primary_text_default_material_light"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_speed"
                        android:textSize="14sp"
                        android:textColor="@color/primary_text_default_material_light"/>





                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="16dp">

                    <TextView
                        android:id="@+id/text_total_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/primary_text_default_material_light"
                        />
                    <TextView
                        android:id="@+id/text_total_expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/primary_text_default_material_light"
                        />
                    <TextView
                        android:id="@+id/text_average_speed_complete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/primary_text_default_material_light"
                        />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>